# eggsecutor

./: .gitignore  Cargo.toml  README.md  bin  coverage_data.csv  test_bin  x.py
.github/workflows/: rust.yml
src/: errors.rs  file_io.rs  main.rs  output_display.rs  subcommands.rs
