[package]
name = "eggsecutor"
version = "1.0.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple and lightweight stateful daemon tracking CLI"
readme = "README.md"
repository = "https://github.com/astherath/eggsecutor"
keywords = ["daemon", "task-manager"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
shellexpand = "2.1"
serde_json = "1.0.59"
serde = {version = "1.0.127", features = ["derive"]}


